--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>My Love</title>
     <!-- <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -112,11 +112,11 @@
 
             // set up text to print, each item in array is new line
             var aText = new Array(
-                "20-10-2023 Ngày Phụ Nữ Việt Nam",
-                "Chúc chị iuuu của em ",
-                "Luôn xinh đẹp, mạnh khoẻ và hạnh phúc",
-                "Luôn được yêu thương, che chở ",
-                "Tìm được người mình yêu và cũng yêu thương mình <3"
+                "Anh không có lời nào để ",
+                "chúc em cả, vì em xứng đáng ",
+                "được hưởng tất cả những điều tốt đẹp ",
+                "trên đời này. Chúc em 20/10 thật vui vẻ",
+                "và hạnh phúc. Cũng buồn vì không có anh ở bên. Yêu em <3"
             );
             var iSpeed = 100; // time delay of print out
             var iIndex = 0; // start printing array at this posision
