--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <span id="letter">
             <a href="" id="pp_letter" class="typewrite" data-period="2000"
-                data-type='[ "THANH TÂM", "SUNSHINE", "LOVE","QUEEN" ,"SWEET","INSPIRATION","JEWEL" ]'>
+                data-type='[ "FLOWERS", "SUNSHINE", "LOVE","QUEEN" ,"SWEET","INSPIRATION","JEWEL" ]'>
                 <script>
 
                     var TxtType = function (el, toRotate, period) {
