--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                 "Anh không có lời nào để ",
                 "chúc em cả, vì em xứng đáng ",
                 "được hưởng tất cả những điều tốt đẹp ",
-                "trên đời này. Chúc em 20/10 thật vui vẻ",
-                "và hạnh phúc. Cũng buồn vì không có anh ở bên. Yêu em <3"
+                "trên đời này. Chúc em 20/10 thật vui vẻ và hạnh phúc. Cũng buồn vì không có anh ở bên. Yêu em <3"
             );
             var iSpeed = 100; // time delay of print out
             var iIndex = 0; // start printing array at this posision
